@@ -1,6 +1,7 @@
 2002-09-15  Marius Vollmer  <mvo@zagadka.ping.de>
 
-	* boot-9.scm (feature?): Added deprecation message.
+	* boot-9.scm (feature?): Added deprecation message and enclosed in
+	'begin-deprecated'.
 
 2002-07-08  Marius Vollmer  <mvo@zagadka.ping.de>
 
